--- a/package.json
+++ b/package.json
@@ -9,11 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/stripe-js": "^2.3.0",
+    "axios": "^1.6.3",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^9.1.0",
+    "react-share": "^5.0.3",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "stripe": "^14.12.0"
   },
   "devDependencies": {
+    "@types/react": "18.2.48",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
