--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.16",
+    "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/stripe-js": "^2.3.0",
     "axios": "^1.6.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
