--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/stripe-js": "^2.3.0",
     "axios": "^1.6.3",
+    "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
