--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-share": "^5.0.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.2",
     "stripe": "^14.12.0"
   },
   "devDependencies": {
