--- a/package.json
+++ b/package.json
@@ -23,19 +23,16 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^9.1.0",
     "react-share": "^5.0.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "sharp": "^0.33.2",
     "stripe": "^14.12.0"
   },
   "devDependencies": {
     "@types/react": "18.2.48",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "5.3.3"
+    "tailwindcss": "^3.3.0"
   }
 }
